--- a/readings.html
+++ b/readings.html
@@ -11,6 +11,7 @@
   <ul>
     <li><a href="https://www.harveker.com/">The Secrets of the Millionaire Mind - Harv Eker</a></li>
     <li><a href="http://www.themillionairefastlane.com/">The Millionaire Fastlane - MJ DeMarco</a></li>
+    <li><a href="http://zerotoonebook.com/">Zero to One - Peter Thiel</a></li>
   </ul>
 </body>
 
