Added css external file

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Contact Information</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<title>Contact Information</title>
 
 <body>
   <h3>Contact Information</h3>
