--- a/interests.html
+++ b/interests.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Personal Interests</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
