--- a/readings.html
+++ b/readings.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Favorite Readings</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -11,7 +12,6 @@
   <ul>
     <li><a href="https://www.harveker.com/">The Secrets of the Millionaire Mind - Harv Eker</a></li>
     <li><a href="http://www.themillionairefastlane.com/">The Millionaire Fastlane - MJ DeMarco</a></li>
-    <li><a href="http://zerotoonebook.com/">Zero to One - Peter Thiel</a></li>
   </ul>
 </body>
 
